<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/EstiloLayoutPrincipal"
    tools:context=".DatosActivity">

    <LinearLayout
        android:id="@+id/LayoutNombre"
        style="@style/EstiloLayoutSecundario">

        <TextView
            android:id="@+id/lblNombre"
            style="@style/EstiloLabels"
            android:text="@string/textolblNombre" />

        <EditText
            android:id="@+id/txNombre"
            style="@style/EstiloTextos"
            android:hint="@string/hintNombre"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutApellidos"
        style="@style/EstiloLayoutSecundario">

        <TextView
            android:id="@+id/lblApellidos"
            style="@style/EstiloLabels"
            android:text="@string/textolblApellidos"
            android:textColor="@color/textos" />

        <EditText
            android:id="@+id/txApellidos"
            style="@style/EstiloTextos"
            android:hint="@string/hintApellidos"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutEdadSexo"
        style="@style/EstiloLayoutSecundario">

        <TextView
            android:id="@+id/lblEdad"
            style="@style/EstiloLabels"
            android:fontFamily="@font/allerta"
            android:text="@string/textolblEdad"
            android:textColor="@color/textos" />

        <EditText
            android:id="@+id/txEdad"
            style="@style/EstiloTextos.Edad"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/grupoSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:text="@string/textolblSexo"
                android:textColor="@color/textos" />

            <RadioButton
                android:id="@+id/radioMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/allerta"
                android:text="@string/textoMujer" />

            <RadioButton
                android:id="@+id/radioHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="@font/allerta"
                android:text="@string/textoHombre" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutEstado"
        style="@style/EstiloLayoutSecundario">

        <TextView
            android:id="@+id/lblEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:text="@string/textolblEstado"
            android:textColor="@color/textos" />

        <Spinner
            android:id="@+id/eligeEstado"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:entries="@array/eligeEstado" />


        <Switch
            android:id="@+id/swHijos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/allerta"
            android:showText="true"
            android:text="@string/textolblHijos"
            android:textColor="@color/textos"
            android:textOff="@string/swHijosNo"
            android:textOn="@string/swHijosSi" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnGenerar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:drawableTop="@android:drawable/checkbox_on_background"
            android:fontFamily="@font/rasa"
            android:text="@string/textobtnGenerar"
            android:textColor="@color/botones" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@android:drawable/ic_delete"
            android:text="@string/textobtnBorrar"
            android:textColor="@color/botones" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>